Build to bin directory to keep binaries out of source control.

--- a/IRSender/.vscode/tasks.json
+++ b/IRSender/.vscode/tasks.json
@@ -13,7 +13,7 @@
 		  "-g",
 		  "${file}",
 		  "-o",
-		  "${fileDirname}/${fileBasenameNoExtension}"
+		  "${fileDirname}/bin/s${fileBasenameNoExtension}"
 		],
 		"options": {
 		  "cwd": "${workspaceFolder}"
