--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
+[env:d1-mini]
+platform = espressif8266
+board = d1_mini
 framework = arduino
-lib_deps = ukw100/IRMP
 monitor_speed = 115200
+upload_speed = 460800
+lib_ldf_mode = deep+
+lib_deps = 
+	crankyoldgit/IRremoteESP8266@^2.8.6
+	bblanchon/ArduinoJson@^7.2.0
+	tzapu/WiFiManager@^2.0.17
