--- a/.gitignore
+++ b/.gitignore
@@ -349,8 +349,10 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-.pio/*
+.pio
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+include/config.h
+env_secrets.ini
