--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,29 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1-mini]
-platform = espressif8266
-board = d1_mini
+[platformio]
+default_envs = d1_mini_serial
+; See example_env_secrets.ini for an example of how to use this file
+extra_configs =
+  env_secrets.ini
+
+[env]
 framework = arduino
-monitor_speed = 115200
-upload_speed = 460800
 lib_ldf_mode = deep+
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.6
 	bblanchon/ArduinoJson@^7.2.0
 	tzapu/WiFiManager@^2.0.17
+    martinsos/HCSR04@^2.0.0
+	ArduinoOTA
+
+[env:d1_mini_serial]
+platform = espressif8266
+board = d1_mini
+monitor_speed = 115200
+upload_speed = 460800
+
+[env:d1_mini_ota]
+platform = espressif8266
+board = d1_mini
+upload_protocol = espota
