--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = d1_mini_serial
+default_envs = d1_mini_ota
 ; See example_env_secrets.ini for an example of how to use this file
 extra_configs =
   env_secrets.ini
