--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,14 @@ extra_configs =
 [env]
 framework = arduino
 lib_ldf_mode = deep+
+board_build.filesystem = littlefs
+; Memory Partitioning:
+; The following line is important as it defines how the flash memory
+; is partitioned. For example, eagle.flash.4m1m.ld means:
+; 4MB total flash
+; 1MB allocated for filesystem
+; Remaining space for program storage
+board_build.ldscript = eagle.flash.4m1m.ld
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.6
 	bblanchon/ArduinoJson@^7.2.0
