Add missing files

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,7 @@ lib_deps =
 	crankyoldgit/IRremoteESP8266@^2.8.6
 	bblanchon/ArduinoJson@^7.2.0
 	tzapu/WiFiManager@^2.0.17
+	martinsos/HCSR04@^2.0.0
 	ArduinoOTA
 
 [env:d1_mini_serial]
